text align in search button fix and added image alts

--- a/style.css
+++ b/style.css
@@ -1237,7 +1237,7 @@ ul {
   font-size: 20px;
   font-style: italic;
   font-weight: normal;
-  text-align: center;
+  text-align: left;
 }
 
 .search--brands input[type='submit'] {
