--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -100,7 +100,7 @@
 
 			font-style: italic;
 			font-weight: normal;
-			text-align: center;
+			text-align: left;
 		}
 	}
 
